# universal-link

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/universallink/app/: MainActivity.kt  NativeCore.kt  UdsHello.kt
android/ffi/: Cargo.toml  build.rs
android/ffi/src/: lib.rs  logcat.rs
client/: Cargo.toml
client/src/: channel.rs  conn.rs  framing.rs  lib.rs  transport.rs
client/tests/api/: channel.rs  connection.rs  events.rs  full_stack.rs  main.rs  protocol.rs  requests.rs  support.rs
clipboard/: Cargo.toml
clipboard/src/: backend.rs  files.rs  fuse.rs  lib.rs  macos.rs  main.rs  orchestrator.rs  os.rs  webdav.rs  windows.rs  windows_ole.rs  x11.rs
clipboard/tests/: linux_files.rs  linux_webdav.rs  macos.rs  windows.rs  x11.rs
clipboard/tests/api/: destination.rs  main.rs  source.rs  support.rs
core/: Cargo.toml
core/src/: account_key.rs  clipboard.rs  clipnet.rs  conn.rs  connector.rs  datachannel.rs  dataplane.rs  framing.rs  http.rs  identity.rs  lib.rs  login.rs  rpc.rs  secrets.rs  session.rs  state.rs  transport.rs
core/tests/api/: account.rs  clipboard.rs  clipboard_net.rs  components.rs  dataplane.rs  devices.rs  enrollment.rs  events.rs  hello.rs  login.rs  main.rs  protocol.rs  session.rs  startup.rs  support.rs  system.rs
daemon/: Cargo.toml
daemon/src/: child.rs  config.rs  dataplane.rs  lib.rs  logging.rs  main.rs  secrets.rs  supervisor.rs  tls.rs
daemon/tests/api/: dataplane.rs  main.rs  supervisor.rs  support.rs
deploy/: .env.example  Caddyfile  docker-compose.yml  reverse-proxy-nginx.conf.example  universallink-server.service
doc/: architecture.md  core-api.md  deployment.md  first-link.md  server-api.md  server-deployment.md
docker/server/: Dockerfile
docker/ul-build/: Dockerfile
gui/: Cargo.toml  build.rs  tauri.conf.json
gui/capabilities/: default.json
gui/icons/: icon.icns
gui/src/: bridge.rs  lib.rs  main.rs  supervise.rs
gui/tests/api/: bridge.rs  commands.rs  config.rs  full_stack.rs  main.rs  support.rs
gui/ui/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
gui/ui/src/: App.svelte  App.test.ts  app.css  main.ts  vite-env.d.ts
gui/ui/src/dev/: fake-core.ts
gui/ui/src/lib/: api.ts  core.test.ts  core.ts  dragdrop.test.ts  dragdrop.ts  errors.ts  format.test.ts  format.ts  harness.ts  store.svelte.ts  store.test.ts
gui/ui/src/views/: Account.svelte  Account.test.ts  Approvals.svelte  Approvals.test.ts  Devices.svelte  Devices.test.ts  Onboarding.svelte  Onboarding.test.ts  ServerSetup.svelte  ServerSetup.test.ts
paths/: Cargo.toml
paths/src/: lib.rs
server/: Cargo.toml
server-daemon/: Cargo.toml
server-daemon/src/: config.rs  lib.rs  main.rs  store.rs
server/src/: conn.rs  lib.rs  oidc.rs  rpc.rs  state.rs  store.rs
server/tests/api/: auth_authenticate.rs  auth_enroll.rs  devices.rs  main.rs  persistence.rs  presence.rs  protocol.rs  support.rs
test-support/: Cargo.toml
test-support/src/: lib.rs  memory_transport.rs
tray/: Cargo.toml
tray/src/: lib.rs  main.rs
