# SPDX-License-Identifier: AGPL-3.0-only

[package]
name = "universallink-clipboard"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

# The OS clipboard backend: the exclusive `clipboard-backend` component. It
# observes local copies and announces them (`clipboard.updated`), serves inline
# pastes from the OS clipboard over a provider channel (`clipboard.get_data`),
# and — for a remote copy — takes ownership of the OS clipboard and pulls the
# bytes at paste time (`transactions.open` + a consumer channel). The
# OS-agnostic orchestrator (the announce/promise/session state machine) lives in
# the lib and is frozen by tests/api/ against a real Core; the per-OS backends
# land in later bricks (X11, Windows, macOS).

[[bin]]
name = "universallink-clipboard"
path = "src/main.rs"

[dependencies]
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "io-std",
    "io-util",
    "sync",
] }
universallink-ipc-client = { path = "../client" }

# X11/XWayland clipboard backend (Linux only): the owner-driven deferred-render
# selection loop. Same stack the private POC uses — `xcb` (an FFI binding to the
# system libxcb) with the XFixes extension for selection-owner notifications, and
# `mio` (os-poll + os-ext for the eventfd-backed `Waker`) to pump the X socket fd
# and the command queue on the main thread. Non-Linux targets never pull these.
[target.'cfg(target_os = "linux")'.dependencies]
xcb = { version = "1", features = ["xfixes"] }
mio = { version = "1", features = ["os-poll", "os-ext"] }

# Windows clipboard backend (Windows only): the synchronous delayed-render
# message loop. `windows-sys` is the raw FFI surface (MIT/Apache, no system libs
# to install) — only the modules we call are enabled. `image` (png feature only)
# decodes/encodes PNG so DIB-only sources (Snipping Tool, Paint) round-trip via
# `CF_DIBV5`. Non-Windows targets never pull these.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }
image = { version = "0.25", default-features = false, features = ["png"] }

# macOS clipboard backend (macOS only): the synchronous delayed-render run loop
# on `NSPasteboard`, through the typed `objc2` Objective-C bindings (the same
# 0.6/0.3 stack the tray already pulls via tao/tauri — no version bump). The
# `NSPasteboard` feature exposes the pasteboard, its type constants, and the
# `NSPasteboardTypeOwner` protocol; `NSImageRep` + `NSBitmapImageRep` give the
# native, in-memory `NSBitmapImageRep` TIFF↔PNG conversion (headless-safe via
# ImageIO), so no image codec crate is needed. `NSDate`/`NSRunLoop` drive the
# main-thread run-loop pump; `NSString`/`NSData`/`NSArray`/`NSDictionary` are the
# value types we pass. Non-macOS targets never pull these.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSData",
    "NSArray",
    "NSDictionary",
    "NSDate",
    "NSRunLoop",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSPasteboard",
    "NSImageRep",
    "NSBitmapImageRep",
] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
universallink-core = { path = "../core" }
universallink-test-support = { path = "../test-support" }

# Live-X round-trip tests (tests/x11.rs) drive a SECOND X client (a requestor
# and a selection owner) against the real backend under Xvfb. Linux-only, and
# only the core `x` protocol is needed on the test side.
[target.'cfg(target_os = "linux")'.dev-dependencies]
xcb = { version = "1", features = ["xfixes"] }

# Live Windows-clipboard round-trip tests (tests/windows.rs) play the copying /
# pasting application against the real backend, driving the OS clipboard directly
# — so the test side needs the same raw Win32 surface. All `#[ignore]`d and
# skip-if-`Unsupported`, validated manually on a real desktop.
[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
] }

# Live macOS-pasteboard round-trip tests (tests/macos.rs) play the copying /
# pasting application against the real backend, driving `NSPasteboard` directly —
# so the test side needs the same `objc2` surface. All `#[ignore]`d, validated
# manually on a real Mac desktop (a logged-in GUI session, where `pbs` runs).
[target.'cfg(target_os = "macos")'.dev-dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSData", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }
