[package]
name = "universallink-daemon"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

# The Core process: this crate produces the executable launched at session
# login. It plugs into the `universallink-core` library everything the library
# cannot carry — TLS, the OS keyring, logging, signals — and
# supervises the official components it spawns.
#
# Why a separate crate and not a `[[bin]]` in `core/`: the library is
# cross-checked from Linux (`cargo check -p universallink-core --target
# x86_64-pc-windows-msvc`), yet rustls and keyring do not cross-compile. The
# daemon, by contrast, is only compiled natively — by the three CI jobs.

[[bin]]
name = "universallink-core"
path = "src/main.rs"

# Supervisor test fixture: a component that actually connects to the
# Core using the token received on its standard input. Not a distributed artifact.
[[bin]]
name = "ul-fake-component"
path = "src/bin/fake_component.rs"

[features]
# TEST constructors for the data plane (`IrohTransport::bind_test`:
# local relay, UNVERIFIED certificates, portmapper disabled). Enabled by the
# dev-dependencies only — the unverified TLS path does not exist in the
# production binary, and the compiler guarantees it (CI checks this:
# `cargo check --lib --bins` compiles without this feature).
test-utils = ["iroh/test-utils"]

[dependencies]
anyhow = "1"
gethostname = "1"
# node_id: hex decoding of the device seed and encoding of a peer's EndpointId.
hex = "0.4"
# P2P data plane: end-to-end encrypted QUIC, NAT traversal, relays
# (quinn/rustls). Compiled natively — this is exactly what the Core library
# cannot cross-compile, hence it is plugged in here, like TLS.
iroh = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
universallink-core = { path = "../core" }
universallink-paths = { path = "../paths" }

# OS keyring. Default features: on Linux the zbus backend is pure
# Rust (no libdbus at build time), macOS uses the Keychain, Windows
# the Credential Manager.
keyring = "4"

# TLS client. `ring` provider and not `aws-lc-rs`: the latter requires cmake and
# NASM on windows-msvc. `rustls-platform-verifier` delegates validation to
# the OS store (enterprise root, user-added root) —
# on Linux it falls back to the system CA bundle.
rustls-platform-verifier = "0.7"
tokio-rustls = { version = "0.26", default-features = false, features = [
    "logging",
    "ring",
    "tls12",
] }

[target.'cfg(unix)'.dependencies]
# Process group + SIGTERM: `tokio::process::Child` only exposes SIGKILL.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Job Object: kill a child's process tree (a menu backend has shims).
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
universallink-ipc-client = { path = "../client" }
# In-memory transport for the supervisor tests (a real Core without iroh).
universallink-test-support = { path = "../test-support" }
# Local relay: test two real iroh endpoints offline, without depending on the
# public relays.
iroh = { version = "1", features = ["test-utils"] }
# Dev-dependency on itself: enables `test-utils` (hence `bind_test`) for
# the tests WITHOUT enabling it in the production build.
universallink-daemon = { path = ".", features = ["test-utils"] }
