[package]
name = "universallink-test-support"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

# Shared test building blocks between the server and Core suites: fake OIDC,
# Ed25519 device keys, JSON-RPC WebSocket client. Never compiled outside tests
# (dev-dependency of both crates).

[dependencies]
axum = "0.8"
# PKCE code_challenge verification (S256) on the fake OIDC side.
base64 = "0.22"
# `=3.0.0-rc.0`: aligned with the iroh-base 1.0.2 pin (see core/Cargo.toml).
ed25519-dalek = { version = "=3.0.0-rc.0", features = ["rand_core"] }
# Parsing of query strings (authorize, token) and of the test browser.
form_urlencoded = "1"
futures-util = "0.3"
hex = "0.4"
# Same constraints as the server: `rust_crypto` backend required.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.10"
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.30"
# The in-memory transport (`memory_transport`) implements the Core library's
# `PeerTransport` trait. Deliberate dev-only cycle (core[tests] → test-support → core[lib]):
# cargo allows it, and the Core's lib-only cross-check compiles no dev-dep.
universallink-core = { path = "../core" }
